# ai-evals-hw-langsmith

./: .env.example  .gitignore  README.md  pyproject.toml
hw1/: agent.py  hw1.ipynb  hw1_build_recipe_agent.ipynb
hw2/: hw2.ipynb  hw2_error_analysis.ipynb  traces.json  upload_feedback.py  upload_traces.py
hw3/: agent.py  data.csv  hw3.ipynb  hw3_llm_as_judge.ipynb
hw4/: hw4.ipynb  hw4_retrieval_eval.ipynb  synthetic_queries.jsonl
hw5/: generate_traces.py  hw5.ipynb  hw5_transition_matrix.ipynb  traces.json  upload_traces.py
